--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -29,15 +29,17 @@
 
 
         <div class="right">
-            <h5>Login</h5>
+            <h5>Register</h5>
 
             <div class="inputs">
-
+                <input type="text" placeholder="nom">
+                <br>
                 <input type="email" placeholder="email">
                 <br>
                 <input type="password" placeholder="password">
                 <br>
-
+                <input type="text" placeholder="country">
+                <br>
 
 
             </div>
@@ -55,7 +57,7 @@
             </div>
 
             <br>
-            <button (click)="Gotohome()">Login</button>
+            <button (click)="Sign_In()">Register</button>
         </div>
 
     </div>
